古诗词代码生成修改